Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li>Fundamentos de QA</li>
                 <li>Automação de Testes</li>
                 <li>Práticas ágeis</li>
-                <li>Ferramentas como Selenium, JUnit, entre outras</li>
+                <li>Ferramentas como Cypress, Jira, entre outras</li>
             </ul>
         </div>
     </section>
@@ -58,11 +58,11 @@
             <h2>Depoimentos</h2>
             <blockquote>
                 <p>"A mentoria foi essencial para eu conseguir minha primeira vaga como QA. O acompanhamento personalizado faz toda a diferença!"</p>
-                <cite>— Maria Silva</cite>
+                <cite>— Beatriz Santos</cite>
             </blockquote>
             <blockquote>
                 <p>"Com a QualiMentor, consegui desenvolver habilidades em automação de testes e me destacar nas entrevistas."</p>
-                <cite>— João Souza</cite>
+                <cite>— Santos</cite>
             </blockquote>
         </div>
     </section>
