Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </blockquote>
             <blockquote>
                 <p>"Com a QualiMentor, consegui desenvolver habilidades em automação de testes e me destacar nas entrevistas."</p>
-                <cite>— Santos</cite>
+                <cite>— Brenda Santos</cite>
             </blockquote>
         </div>
     </section>
